Scrapping done and E2E test complete

--- a/soda-extension/popup.html
+++ b/soda-extension/popup.html
@@ -5,6 +5,7 @@
 </head>
 <body>
   <h3>Page Scraper</h3>
+  <p id="chatGptRes"></p>
   <button id="scrape-btn">Scrape Page</button>
   <script src="popup.js"></script>
 </body>
