Fixed Scrapping Issue

--- a/soda-extension/popup.html
+++ b/soda-extension/popup.html
@@ -2,6 +2,22 @@
 <html>
 <head>
   <title>Scraper</title>
+<style>
+    .loading {
+        animation: spin 1s linear infinite;
+    }
+
+    @keyframes spin {
+        0% {
+            transform: rotate(0deg);
+        }
+
+        100% {
+            transform: rotate(360deg);
+        }
+    }
+</style>
+
 </head>
 <body>
   <h3>Page Scraper</h3>
